Add social links

--- a/config.yaml
+++ b/config.yaml
@@ -137,15 +137,17 @@ params:
       url: "/jseverud_cv.pdf"
       download: true
       newPage: false
-    # socialLinks:
-    #  fontAwesomeIcons:
-    #    - icon: fab fa-github
-    #      url: https://example.com
+     socialLinks:
+      fontAwesomeIcons:
+        - icon: fab fa-github
+          url: https://example.com
     #    - icon: fab fa-x-twitter
     #      url: https://example.com
-    #  customIcons:
-    #    - icon: /fav.png
-    #      url: "https://example.com"
+      customIcons:
+        - icon: /square-letterboxd.svg
+          url: "https://letterboxd.com/forkentiney/"
+        - icon: /listenbrainz.svg
+          url: "https://listenbrainz.org/user/Forkentiney"
 
   # About
   about:
