Fixed broken link

--- a/config.yaml
+++ b/config.yaml
@@ -140,7 +140,7 @@ params:
     socialLinks:
       fontAwesomeIcons:
         - icon: fab fa-github
-          url: https://example.com
+          url: https://github.com/forkentiney
         #- icon: fab fa-x-twitter
         #  url: https://example.com
       customIcons:
